--- a/CyFi_TTS/index.html
+++ b/CyFi_TTS/index.html
@@ -96,7 +96,8 @@
                           <thead>
                             <tr>
                               <td colspan="5" style="vertical-align: top;">
-                                <em> Script: Oswald again agreed to advise the FBI if he were approached under suspicious circumstances; however he deprecated the possibility of this happening.</em>                              </td>
+                                <em> Script: Oswald again agreed to advise the FBI if he were approached under suspicious circumstances; however he deprecated the possibility of this happening. </em>                              
+                              </td>
                             </tr>
                           </thead>
                           
@@ -253,8 +254,9 @@
                         <!-- 1개 demo sample 시작-->
                         <thead>
                           <tr>
-                            <td colspan="4" style="vertical-align: top;">
-                              <em> Script: He troubled over many little details and talked perfunctorily to everybody. </em>
+                            <td colspan="4" style="vertical-align: top;">                                                                       
+                              <em> Script: He troubled over many little details and talked perfunctorily to everybody.</em>
+
                             </td>
                           </tr>
                         </thead>
