--- a/CyFi_TTS/index.html
+++ b/CyFi_TTS/index.html
@@ -503,7 +503,10 @@
             <!-- About Section Heading-->
             <div class="text-center">
                 <h2 class="page-section-heading d-inline-block text-black">Korean Transcripts Demo</h2> <br>
-                We further demonstrate the performance of multi-speakers. This is the result of learning the model using the internal Korean training dataset. There are 50 speakers, each recording 10 hours. This data used will not be used for commercial purposes.
+                We further demonstrate the performance of multi-speakers. <br>
+                This is the result of learning the model using the internal Korean training dataset.<br>
+                There are 50 speakers, each recording 10 hours. This data used will not be used for commercial purposes. <br>
+                The speech of korean demo was inferred using an unseen script.
             </div>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
